Allow SharedArrayBuffer with FlexibleArrayBufferView.

Assertions fail when running multithreaded WebAssembly code which uses
WebGL.

Bug: 905000
Change-Id: Ic45df5f43aa859a5f9225586f4836919ef31b54a
Reviewed-on: https://chromium-review.googlesource.com/c/1334844
Reviewed-by: James Darpinian <jdarpinian@chromium.org>
Commit-Queue: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607875}