third_party/blink/renderer/core/typed_arrays/flexible_array_buffer_view.h
@@ -44,7 +44,7 @@ class CORE_EXPORT FlexibleArrayBufferView {
   // FlexibleArrayBufferView object.
   void* BaseAddressMaybeOnStack() const {
     DCHECK(!IsEmpty());
-    return IsFull() ? full_->BaseAddress() : small_data_;
+    return IsFull() ? full_->BaseAddressMaybeShared() : small_data_;
   }
 
   unsigned ByteOffset() const {
